cmake_minimum_required(VERSION 3.28)
project(QL1K LANGUAGES CXX)

if(NOT MSVC OR NOT WIN32 OR CMAKE_SIZEOF_VOID_P EQUAL 8)
    message(FATAL_ERROR "QL1K requires 32-bit MSVC: configure with -A Win32")
endif()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(FETCHCONTENT_SOURCE_DIR_ZYDIS "${CMAKE_CURRENT_SOURCE_DIR}/third_party/zydis" CACHE PATH "" FORCE)
set(SAFETYHOOK_FETCH_ZYDIS ON CACHE BOOL "" FORCE)
set(SAFETYHOOK_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(SAFETYHOOK_BUILD_TEST OFF CACHE BOOL "" FORCE)
set(SAFETYHOOK_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(third_party/safetyhook EXCLUDE_FROM_ALL)

add_library(ql_fps_patch SHARED src/ql_patch_core.cpp src/ql_patch.def)
target_include_directories(ql_fps_patch PRIVATE src)
target_compile_definitions(ql_fps_patch PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
target_compile_options(ql_fps_patch PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
target_link_options(ql_fps_patch PRIVATE /WX /Brepro)
target_link_libraries(ql_fps_patch PRIVATE safetyhook bcrypt opengl32)
set_target_properties(ql_fps_patch PROPERTIES OUTPUT_NAME ql_fps_patch)

add_executable(ql_fps_injector src/injector.cpp)
target_compile_definitions(ql_fps_injector PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX)
target_compile_options(ql_fps_injector PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
target_link_options(ql_fps_injector PRIVATE /WX /Brepro)

include(CTest)
if(BUILD_TESTING)
    add_executable(hitreg_state_tests tests/hitreg_state_tests.cpp)
    target_include_directories(hitreg_state_tests PRIVATE src)
    target_compile_options(hitreg_state_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(hitreg_state_tests PRIVATE /WX /Brepro)
    add_test(NAME hitreg_state_tests COMMAND hitreg_state_tests)

    add_executable(transient_camera_tests tests/transient_camera_tests.cpp)
    target_include_directories(transient_camera_tests PRIVATE src)
    target_compile_options(transient_camera_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(transient_camera_tests PRIVATE /WX /Brepro)
    add_test(NAME transient_camera_tests COMMAND transient_camera_tests)

    add_executable(render_interpolation_tests tests/render_interpolation_tests.cpp)
    target_include_directories(render_interpolation_tests PRIVATE src)
    target_compile_options(render_interpolation_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(render_interpolation_tests PRIVATE /WX /Brepro)
    add_test(NAME render_interpolation_tests COMMAND render_interpolation_tests)

    add_executable(font_upload_tests tests/font_upload_tests.cpp)
    target_include_directories(font_upload_tests PRIVATE src)
    target_compile_options(font_upload_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(font_upload_tests PRIVATE /WX /Brepro)
    add_test(NAME font_upload_tests COMMAND font_upload_tests)

    add_executable(smp_context_handoff_tests tests/smp_context_handoff_tests.cpp)
    target_include_directories(smp_context_handoff_tests PRIVATE src)
    target_compile_options(smp_context_handoff_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(smp_context_handoff_tests PRIVATE /WX /Brepro)
    add_test(NAME smp_context_handoff_tests COMMAND smp_context_handoff_tests)

    add_executable(raster_fingerprint_tests tests/raster_fingerprint_tests.cpp)
    target_include_directories(raster_fingerprint_tests PRIVATE src)
    target_compile_options(raster_fingerprint_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(raster_fingerprint_tests PRIVATE /WX /Brepro)
    add_test(NAME raster_fingerprint_tests COMMAND raster_fingerprint_tests)

    add_executable(hud_command_replay_tests tests/hud_command_replay_tests.cpp)
    target_include_directories(hud_command_replay_tests PRIVATE src)
    target_compile_options(hud_command_replay_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(hud_command_replay_tests PRIVATE /WX /Brepro)
    add_test(NAME hud_command_replay_tests COMMAND hud_command_replay_tests)

    add_executable(bloom_fast_path_tests tests/bloom_fast_path_tests.cpp)
    target_include_directories(bloom_fast_path_tests PRIVATE src)
    target_compile_options(bloom_fast_path_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(bloom_fast_path_tests PRIVATE /WX /Brepro)
    add_test(NAME bloom_fast_path_tests COMMAND bloom_fast_path_tests)

    add_executable(shadow_mark_cache_tests tests/shadow_mark_cache_tests.cpp)
    target_include_directories(shadow_mark_cache_tests PRIVATE src)
    target_compile_options(shadow_mark_cache_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(shadow_mark_cache_tests PRIVATE /WX /Brepro)
    add_test(NAME shadow_mark_cache_tests COMMAND shadow_mark_cache_tests)

    add_executable(color_correct_fast_path_tests tests/color_correct_fast_path_tests.cpp)
    target_include_directories(color_correct_fast_path_tests PRIVATE src)
    target_compile_options(color_correct_fast_path_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(color_correct_fast_path_tests PRIVATE /WX /Brepro)
    add_test(NAME color_correct_fast_path_tests COMMAND color_correct_fast_path_tests)

    add_executable(player_style_fast_path_tests tests/player_style_fast_path_tests.cpp)
    target_include_directories(player_style_fast_path_tests PRIVATE src)
    target_compile_options(player_style_fast_path_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(player_style_fast_path_tests PRIVATE /WX /Brepro)
    add_test(NAME player_style_fast_path_tests COMMAND player_style_fast_path_tests)

    add_executable(player_scene_replay_tests tests/player_scene_replay_tests.cpp)
    target_include_directories(player_scene_replay_tests PRIVATE src)
    target_compile_options(player_scene_replay_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(player_scene_replay_tests PRIVATE /WX /Brepro)
    add_test(NAME player_scene_replay_tests COMMAND player_scene_replay_tests)

    add_executable(renderer_diagnostics_tests tests/renderer_diagnostics_tests.cpp)
    target_include_directories(renderer_diagnostics_tests PRIVATE src)
    target_compile_options(renderer_diagnostics_tests PRIVATE /W4 /WX /permissive- /sdl /EHsc /Oi)
    target_link_options(renderer_diagnostics_tests PRIVATE /WX /Brepro)
    add_test(NAME renderer_diagnostics_tests COMMAND renderer_diagnostics_tests)

endif()
